--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "geek-shop-back",
+  "name": "minesweeper-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
-    "test": "jest"
+    "start": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
